--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "code-tagger",
-  "version": "1.0.0",
-  "description": "Utility for code tagging and reporting",
-  "main": "src/index.ts",
+  "version": "0.1.0",
+  "description": "Utility for tagging code and automate report creation",
+  "main": "src/code-tagger-cli.js",
   "bin": {
     "code-tagger": "src/code-tagger-cli.js"
   },
@@ -13,7 +13,7 @@
     "build": "rm -rf .dist && mkdir .dist && npm pack && mv code-tagger-* .dist"
   },
   "author": "Iñaki Elizari Reta",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@jest/globals": "^29.5.0",
     "@types/node": "^14.11.2",
