--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   "devDependencies": {
     "@jest/globals": "^29.5.0",
     "@types/node": "^14.11.2",
-    "jest": "^29.5.0",
-    "husky": "^8.0.0"
+    "husky": "^8.0.0",
+    "jest": "^29.5.0"
   },
   "dependencies": {
     "glob": "^10.2.7",
-    "peggy": "^3.0.2"
+    "peggy": "^3.0.2",
+    "yargs": "^17.7.2"
   }
 }
