--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "app": "node src/code-tagger-cli.js",
+    "app:debug": "node src/code-tagger-cli.js --debug",
     "test": "jest",
     "build-peggy": "peggy -o .dist/parser.js -o .dist/peggyParser.js src/peggy/rules.pegjs",
     "build": "rm -rf .dist && mkdir .dist && npm pack && mv code-tagger-* .dist",
@@ -17,13 +18,17 @@
   "license": "MIT",
   "devDependencies": {
     "@jest/globals": "^29.5.0",
+    "@testing-library/dom": "^9.3.1",
+    "@testing-library/jest-dom": "^5.16.5",
     "@types/node": "^14.11.2",
     "husky": "^8.0.0",
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.6.1"
   },
   "dependencies": {
     "glob": "^10.2.7",
     "peggy": "^3.0.2",
+    "tabulator-tables": "^5.5.0",
     "yargs": "^17.7.2"
   }
 }
