--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "test": "jest",
     "build-peggy": "peggy -o .dist/parser.js -o .dist/peggyParser.js src/peggy/rules.pegjs",
     "build": "rm -rf .dist && mkdir .dist && npm pack && mv test-tagger-* .dist",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "dev-visor": "vite --port 51173",
+    "build-visor": "vite build",
+    "preview-visor": "vite preview"
   },
   "author": "Iñaki Elizari Reta",
   "repository": {
@@ -25,16 +28,19 @@
     "@jest/globals": "^29.5.0",
     "@testing-library/dom": "^9.3.1",
     "@testing-library/jest-dom": "^5.16.5",
-    "@types/node": "^14.11.2",
+    "@types/node": "^18.15.0",
     "husky": "^8.0.0",
     "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.6.1"
+    "jest-environment-jsdom": "^29.6.1",
+    "vite": "^5.1.3",
+    "@vitejs/plugin-vue": "^5.0.3"
   },
   "dependencies": {
     "glob": "^10.2.7",
     "minimatch": "^9.0.3",
     "peggy": "^3.0.2",
     "tabulator-tables": "^5.5.0",
+    "vue": "^3.4.19",
     "yargs": "^17.7.2"
   }
 }
