--- a/package.json
+++ b/package.json
@@ -29,16 +29,17 @@
     "@testing-library/dom": "^9.3.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@types/node": "^18.15.0",
+    "@vitejs/plugin-vue": "^5.0.3",
     "husky": "^8.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.6.1",
-    "vite": "^5.1.3",
-    "@vitejs/plugin-vue": "^5.0.3"
+    "vite": "^5.1.3"
   },
   "dependencies": {
     "glob": "^10.2.7",
     "minimatch": "^9.0.3",
     "peggy": "^3.0.2",
+    "pinia": "^2.1.7",
     "tabulator-tables": "^5.5.0",
     "vue": "^3.4.19",
     "yargs": "^17.7.2"
