--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "build-peggy": "peggy -o .dist/parser.js -o .dist/peggyParser.js src/peggy/rules.pegjs",
     "build": "rm -rf .dist && mkdir .dist && npm pack && mv test-tagger-* .dist",
     "prepare": "husky install",
-    "dev-visor": "vite --port 51173",
-    "build-visor": "vite build",
-    "preview-visor": "vite preview"
+    "ui-dev": "vite --port 51173",
+    "ui-build": "vite build",
+    "ui-preview": "vite preview"
   },
   "author": "Iñaki Elizari Reta",
   "repository": {
@@ -33,6 +33,7 @@
     "husky": "^8.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.6.1",
+    "less": "^4.2.0",
     "vite": "^5.1.3"
   },
   "dependencies": {
