--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.6.1",
     "less": "^4.2.0",
-    "vite": "^5.1.3"
+    "vite": "^5.1.3",
+    "vite-plugin-singlefile": "^2.0.1"
   },
   "dependencies": {
     "glob": "^10.2.7",
